--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory(apps/glfwviewer_multiwin)
 add_subdirectory(apps/glfwviewer_debug)
 add_subdirectory(apps/glfwviewer_vquality)
 add_subdirectory(apps/imshow)
-add_subdirectory(apps/baker)
+#add_subdirectory(apps/baker)
 add_subdirectory(apps/subdivision)
 add_subdirectory(apps/isoremesh)
 add_subdirectory(apps/overhaul_test)
