Add libpng to cmake

--- a/apps/imshow/CMakeLists.txt
+++ b/apps/imshow/CMakeLists.txt
@@ -4,6 +4,7 @@ get_filename_component(FOLDERNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 include(ConfigureOpenGL)
 include(ConfigureGLFW3)
 include(ConfigureGLEW)
+include(ConfigurePNG)
 
 file(GLOB_RECURSE SOURCES "*.cpp")
 file(GLOB_RECURSE HEADERS "*.h")
@@ -11,3 +12,4 @@ file(GLOB_RECURSE SHADERS "*.glsl")
 add_executable(${FOLDERNAME} ${SOURCES} ${HEADERS} ${SHADERS})
 target_link_libraries(${FOLDERNAME} ${LIBRARIES})
 file(COPY ${PROJECT_SOURCE_DIR}/data/world_day.tga DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${PROJECT_SOURCE_DIR}/data/planet.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
