Add transparency test

--- a/apps/imshow/CMakeLists.txt
+++ b/apps/imshow/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(${FOLDERNAME} ${SOURCES} ${HEADERS} ${SHADERS})
 target_link_libraries(${FOLDERNAME} ${LIBRARIES})
 file(COPY ${PROJECT_SOURCE_DIR}/data/world_day.tga DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${PROJECT_SOURCE_DIR}/data/planet.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${PROJECT_SOURCE_DIR}/data/dice.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
