--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,26 @@
 language: cpp
-compiler: clang
-os: osx
+compiler:
+  - gcc
+  - clang
 env:
   - HEADERONLY=True
   - HEADERONLY=False
 script:
   - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug -DOPENGP_HEADERONLY=$HEADERONLY .. && cmake --build .
+matrix:
+  # works on Precise and Trusty
+  - os: linux
+    addons:
+    apt:
+      sources:
+      - ubuntu-toolchain-r-test
+      packages:
+      - g++-5
+    env:
+     - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 before_install:
-  - brew update
-  - brew install glew
-  - brew install eigen
-  - brew install glfw3
+  - eval "${MATRIX_EVAL}"
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libeigen3-dev libglfw3-dev
 notifications:
   email: true
