--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: cpp
+dist: trusty
+sudo: required
 compiler:
   - gcc
   - clang
@@ -20,7 +22,8 @@ matrix:
      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 before_install:
   - eval "${MATRIX_EVAL}"
+  - cd $HOME && git clone https://github.com/glfw/glfw && mkdir glfw/build && cd glfw/build && cmake .. && make -j4 && sudo make install
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libeigen3-dev libglfw3-dev
+  - sudo apt-get install -qq libeigen3-dev libpng-dev
 notifications:
   email: true
