--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,15 @@
 language: cpp
-dist: trusty
-sudo: required
-compiler:
-  - gcc
-  - clang
+compiler: clang
+os: osx
 env:
   - HEADERONLY=True
   - HEADERONLY=False
 script:
   - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug -DOPENGP_HEADERONLY=$HEADERONLY .. && cmake --build .
-matrix:
-  # works on Precise and Trusty
-  - os: linux
-    addons:
-    apt:
-      sources:
-      - ubuntu-toolchain-r-test
-      packages:
-      - g++-5
-    env:
-     - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 before_install:
-  - eval "${MATRIX_EVAL}"
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libxrandr-dev libeigen3-dev libpng-dev
-  - cd $HOME && git clone https://github.com/glfw/glfw && mkdir glfw/build && cd glfw/build && cmake .. && make -j4 && sudo make install
+  - brew update
+  - brew install glew
+  - brew install eigen
+  - brew install glfw3
 notifications:
-  email: true
+email: true
